@@ -1,3 +1,12 @@
+Fri Jun 14 18:52:51 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* compile.c (rb_iseq_compile_node): fix location of a `trace'
+	  instruction (b_return event).
+	  [ruby-core:55305] [ruby-trunk - Bug #8489]
+	  (need a backport to 2.0.0?)
+
+	* test/ruby/test_settracefunc.rb: add a test.
+
 Fri Jun 14 18:18:07 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* class.c, include/ruby/ruby.h: add write barriers for T_CLASS,
